--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             <div class="hbody">
                     <div class="hleft">
                         <div class="htitle">This website is awesome</div>
+                        <div class="htext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                         <button>Sign up</button>
                     </div>
-                    <img class="img-header" src="" alt="placeholder for image">
+                    <img class="img-header" src="./images/cyberpunk.jpg" alt="placeholder for image">
             </div>
         </div>
         <div class="section-2">
