--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
                 <div class="boxes">
                     <div class="box">
                         <div class="square"></div>
-                        <span class="boxtext">this is some subtext under an illustration or image</span>
+                        <div class="boxtext">this is some subtext under an illustration or image</div>
                     </div>
                     <div class="box">
                         <div class="square"></div>
-                        <span class="boxtext">this is some subtext under an illustration or image</span>
+                        <div class="boxtext">this is some subtext under an illustration or image</div>
                     </div>
                     <div class="box">
                         <div class="square"></div>
-                        <span class="boxtext">this is some subtext under an illustration or image</span>
+                        <div class="boxtext">this is some subtext under an illustration or image</div>
                     </div>
                     <div class="box">
                         <div class="square"></div>
-                        <span class="boxtext">this is some subtext under an illustration or image</span>
+                        <div class="boxtext">this is some subtext under an illustration or image</div>
                     </div>
                 </div>
         </div>
