Added CSS to section 4 and footer.
Improved presentation for section 4 and footer.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="hleft">
                         <div class="htitle">This website is awesome</div>
                         <div class="htext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-                        <button>Sign up</button>
+                        <button class="button1">Sign up</button>
                     </div>
                     <img class="img-header" src="./images/cyberpunk.jpg" alt="placeholder for image">
             </div>
@@ -59,7 +59,7 @@
                     <span class="bsquare-text">Sign up for our product by clicking that button right over there!</span>
                 </div>
                 <div class="square-button">
-                    <button>Sign up</button>
+                    <button class="button2">Sign up</button>
                 </div>
             </div>
         </div>
